# kuberay

./: go.sum  sitemap.xml
.github/: pull.yaml
.github/workflows/: helm.yaml  test-job.yaml
.tekton/: odh-kuberay-operator-controller-push.yaml
clients/python-client/: README.md  pyproject.toml  setup.cfg
clients/python-client/python_client/: constants.py  kuberay_cluster_api.py  kuberay_job_api.py
clients/python-client/python_client_test/: test_job_api.py
docs/reference/: api.md
ray-operator/: DEVELOPMENT.md  clusterrole-with-mtls.yaml  deploy-simple.yaml  go.mod  go.sum  main.go  test-mtls-simple.yaml
ray-operator/apis/ray/v1/: raycluster_types.go  zz_generated.deepcopy.go
ray-operator/config/crd/bases/: ray.io_rayclusters.yaml  ray.io_rayjobs.yaml  ray.io_rayservices.yaml
ray-operator/config/openshift/: params.env
ray-operator/config/webhook/: manifests.yaml
ray-operator/controllers/ray/: raycluster_controller.go
ray-operator/pkg/client/applyconfiguration/ray/v1/: rayclusterspec.go
