[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "odh-kuberay-client"
version = "0.0.0-dev"
description = "Python SDK for Kuberay client"

license = "Apache-2.0"

authors = [
    "Bryan Keane <bkeane@redhat.com>"
]

readme = 'README.md'

repository = "https://github.com/opendatahub-io/kuberay"
homepage = "https://github.com/opendatahub-io/kuberay"

keywords = ['kuberay', 'python', 'client']

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "*"
