[metadata]
name = odh_kuberay_client
version = 0.1.0
author = Bryan Keane
description = An OpenDataHub Kuberay python client to interact with Ray Clusters and Ray Jobs
long_description = file: README.md
keywords = kuberay, ray, python-kuberay, kuberay_python_client, opendatahub, odh, codeflare
license = Apache License 2.0
url = https://github.com/opendatahub-io/kuberay/
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6.5
install_requires = kubernetes

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    python_client_test.tests*
